@@ -7,7 +7,6 @@ import com.company.gym.dto.response.UpdatedTrainersListResponse;
 import com.company.gym.dto.response.UserCredentialsResponse;
 import com.company.gym.entity.*;
 import com.company.gym.exception.EntityNotFoundException;
-import com.company.gym.exception.InvalidInputException;
 import com.company.gym.service.TraineeService;
 import com.company.gym.service.TrainerService;
 import org.junit.jupiter.api.BeforeEach;
@@ -42,7 +41,7 @@ class TraineeControllerTest {
     private Trainee testTrainee;
     private TraineeRegistrationRequest registrationRequest;
     private UpdateTraineeProfileRequest updateRequest;
-    private UpdateTrainerForTrainingRequest updateTrainerRequest;
+    private UpdateTraineeTrainersRequest updateTrainerRequest;
     private UpdateActiveStatusRequest statusRequest;
 
     @BeforeEach
@@ -73,9 +72,22 @@ class TraineeControllerTest {
         updateRequest.setAddress("456 Elm St");
         updateRequest.setActive(true);
 
-        updateTrainerRequest = new UpdateTrainerForTrainingRequest();
-        updateTrainerRequest.setTrainingId(1L);
-        updateTrainerRequest.setNewTrainerId(2L);
+        updateTrainerRequest = new UpdateTraineeTrainersRequest();
+        List<UpdateTraineeTrainersRequest.TrainingTrainerUpdate> updates = new ArrayList<>();
+
+        UpdateTraineeTrainersRequest.TrainingTrainerUpdate update1 =
+                new UpdateTraineeTrainersRequest.TrainingTrainerUpdate();
+        update1.setTrainingId(1L);
+        update1.setTrainerUsername("trainer.jane");
+
+        UpdateTraineeTrainersRequest.TrainingTrainerUpdate update2 =
+                new UpdateTraineeTrainersRequest.TrainingTrainerUpdate();
+        update2.setTrainingId(2L);
+        update2.setTrainerUsername("trainer.mark");
+
+        updates.add(update1);
+        updates.add(update2);
+        updateTrainerRequest.setUpdates(updates);
 
         statusRequest = new UpdateActiveStatusRequest();
         statusRequest.setUsername("john.doe");
@@ -102,6 +114,21 @@ class TraineeControllerTest {
         return testTraining;
     }
 
+    private Trainer createTrainer(String username, String firstName, String lastName, String specialization) {
+        Trainer trainer = new Trainer();
+        User user = new User();
+        user.setUsername(username);
+        user.setFirstName(firstName);
+        user.setLastName(lastName);
+        trainer.setUser(user);
+
+        TrainingType type = new TrainingType();
+        type.setTrainingTypeName(specialization);
+        trainer.setSpecialization(type);
+
+        return trainer;
+    }
+
     @Test
     @DisplayName("Register Trainee should return 201 Created on success")
     void registerTrainee_onSuccess() {
@@ -112,18 +139,6 @@ class TraineeControllerTest {
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals("john.doe", response.getBody().getUsername());
-    }
-
-    @Test
-    @DisplayName("Register Trainee should return 400 Bad Request on failure")
-    void registerTrainee_onFailure() {
-        when(traineeService.createTraineeProfile(anyString(), anyString(), any(), anyString()))
-                .thenThrow(new InvalidInputException("Invalid input data"));
-
-        ResponseEntity<UserCredentialsResponse> response = traineeController.registerTrainee(registrationRequest);
-
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        verify(traineeService, times(1)).createTraineeProfile(anyString(), anyString(), any(), anyString());
     }
 
     @Test
@@ -139,19 +154,18 @@ class TraineeControllerTest {
     }
 
     @Test
-    @DisplayName("Get Trainee Profile should return 404 Not Found if trainee does not exist")
+    @DisplayName("Get Trainee Profile should throw EntityNotFoundException if trainee does not exist")
     void getTraineeProfile_traineeNotFound() {
         when(traineeService.getByUsername("john.doe")).thenReturn(Optional.empty());
 
-        ResponseEntity<TraineeProfileResponse> response = traineeController.getTraineeProfile("john.doe");
-
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        assertThrows(EntityNotFoundException.class, () -> traineeController.getTraineeProfile("john.doe"));
     }
 
     @Test
     @DisplayName("Update Trainee Profile should return 200 OK on success")
     void updateTraineeProfile_onSuccess() {
-        when(traineeService.updateTraineeProfile(any(Credentials.class), any(), any())).thenReturn(testTrainee);
+        testTrainee.getUser().setIsActive(false);
+        when(traineeService.updateTraineeProfile(any(), any(), any())).thenReturn(testTrainee);
         when(traineeService.getByUsername("john.doe")).thenReturn(Optional.of(testTrainee));
 
         ResponseEntity<TraineeProfileResponse> response = traineeController.updateTraineeProfile("john.doe", updateRequest);
@@ -159,31 +173,48 @@ class TraineeControllerTest {
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals("John", response.getBody().getFirstName());
-        verify(traineeService, never()).updateStatus(any());
+
+        verify(traineeService, times(1)).updateStatus(argThat(credentials ->
+                credentials.getUsername().equals("john.doe") && credentials.getPassword() == null
+        ));
+
+        verify(traineeService, times(1)).updateTraineeProfile(
+                argThat(credentials -> credentials.getUsername().equals("john.doe") && credentials.getPassword() == null),
+                eq(updateRequest.getDateOfBirth()),
+                eq(updateRequest.getAddress())
+        );
     }
 
     @Test
-    @DisplayName("Update Trainer for Training should return 200 OK on success")
-    void updateTrainerForTraining_onSuccess() {
-        when(traineeService.getTrainersForTrainee("john.doe")).thenReturn(Collections.emptyList());
+    @DisplayName("Update training trainers should return 200 OK on success")
+    void updateTrainingTrainers_onSuccess() {
+        List<Trainer> updatedTrainers = List.of(
+                createTrainer("trainer.jane", "Jane", "Doe", "Yoga"),
+                createTrainer("trainer.mark", "Mark", "Smith", "Pilates")
+        );
+
+        when(traineeService.updateTrainingTrainers(any(), any())).thenReturn(updatedTrainers);
 
         ResponseEntity<UpdatedTrainersListResponse> response = traineeController
-                .updateTrainerForTraining("john.doe", updateTrainerRequest);
+                .updateTrainingTrainers("john.doe", updateTrainerRequest);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        verify(traineeService, times(1)).updateTrainerForTraining(any(Credentials.class), anyLong(), anyLong());
+        assertNotNull(response.getBody());
+        assertEquals(2, response.getBody().getTrainers().size());
+
+        verify(traineeService, times(1)).updateTrainingTrainers(
+                argThat(credentials -> credentials.getUsername().equals("john.doe") && credentials.getPassword() == null),
+                eq(updateTrainerRequest.getUpdates())
+        );
     }
 
     @Test
-    @DisplayName("Update Trainer for Training should return 404 Not Found if training does not exist")
-    void updateTrainerForTraining_trainingNotFound() {
-        doThrow(new EntityNotFoundException("Training not found"))
-                .when(traineeService).updateTrainerForTraining(any(Credentials.class), anyLong(), anyLong());
+    @DisplayName("Update should throw EntityNotFoundException if training not found")
+    void updateTrainingTrainers_trainingNotFound() {
+        when(traineeService.updateTrainingTrainers(any(Credentials.class), anyList()))
+                .thenThrow(new EntityNotFoundException("Training not found"));
 
-        ResponseEntity<UpdatedTrainersListResponse> response = traineeController
-                .updateTrainerForTraining("john.doe", updateTrainerRequest);
-
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        assertThrows(EntityNotFoundException.class, () -> traineeController.updateTrainingTrainers("john.doe", updateTrainerRequest));
     }
 
     @Test
@@ -214,5 +245,16 @@ class TraineeControllerTest {
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         verify(traineeService, times(1)).updateStatus(any(Credentials.class));
+    }
+
+    @Test
+    @DisplayName("Delete Trainee Profile should return 204 No Content")
+    void deleteTraineeProfile_onSuccess() {
+        doNothing().when(traineeService).deleteTraineeProfile(any(Credentials.class));
+
+        ResponseEntity<Void> response = traineeController.deleteTraineeProfile("john.doe");
+
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
+        verify(traineeService, times(1)).deleteTraineeProfile(any(Credentials.class));
     }
 }
